--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@tailwindcss/postcss": "4.0.0-alpha.16",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
@@ -31,8 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.4.39",
-    "tailwindcss": "3.4.4",          
-    "@tailwindcss/postcss": "4.0.0-alpha.16", 
+    "tailwindcss": "3.4.4",
     "vite": "^7.0.0"
   }
 }
